2005-04-18  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Mark a couple of items that are now complete.
	
	* test/.cvsignore:
	* test/Makefile.am:
	* test/fill-and-stroke-ref.png:
	* test/fill-and-stroke.c: (draw), (main): Add test case that fills
	and strokes the same shapes, (in preparation for testing
	cairo_fill_preserve patch).

2005-04-14  Carl Worth  <cworth@cworth.org>

	* TODO: Update API Shakeup chart to indicate that cairo_set_source
	is done.

2005-04-14  Carl Worth  <cworth@cworth.org>

	* src/cairo.h:
	* src/cairo.c: Rename, add, and delete:

		cairo_set_pattern	-> cairo_set_source
		cairo_get_pattern	-> cairo_get_source
		cairo_set_rgb_color	-> cairo_set_source_rgb
					-> cairo_set_source_rgba
		cairo_set_alpha		->
		cairo_get_alpha		->

	Note that we'll likely want to add cairo_set_source_surface.

	* src/cairo-color.c: Add _cairo_stock_color helper function.
	Improve some interfaces:

		_cairo_color_init	   _cairo_color_init_rgb
		_cairo_color_set_rgb	-> _cairo_color_init_rgba
		_cairo_color_set_alpha	   _cairo_color_multiply_alpha

		_cairo_color_get_rgb	-> _cairo_color_get_rbga
					   _cairo_color_get_rgba_premultiplied

	* src/cairoint.h: Add cairo_stock_t and some helper macros:

		CAIRO_COLOR_WHITE
		CAIRO_COLOR_BLACK
		CAIRO_COLOR_TRANSPARENT

	Fix cairo_pattern_t by eliminating pattern->alpha.
	Fix cairo_solid_pattern_t to use cairo_color_t rather than three
	doubles.
	
	* src/cairo-glitz-surface.c:
	(_cairo_glitz_pattern_acquire_surface),
	(_cairo_glitz_pattern_acquire_surfaces),
	(_cairo_glitz_surface_composite_trapezoids): Track removal of
	pattern->alpha, simplifying the code considerably
	
	* src/cairo-gstate-private.h:

	* src/cairo-gstate.c: Track _cairo_color interface changes. Remove
	gstate->alpha. Propagate down set_source renamings.

	* src/cairo.h:
	* src/cairo-pattern.c: Rename:

		cairo_pattern_add_color_stop -> cairo_pattern_add_color_stop_rgba

	and add:

		cairo_pattern_add_color_stop_rgb
