@@ -1,3 +1,11 @@
+2005-04-19  Carl Worth  <cworth@cworth.org>
+
+	* test/.cvsignore:
+	* test/Makefile.am:
+	* test/surface-pattern-ref.png:
+	* test/surface-pattern.c: (draw), (main): Add a test of a
+	repeating surface pattern.
+
 2005-04-18  Carl Worth  <cworth@cworth.org>
 
 	* ROADMAP: Mark a couple of items that are now complete.
